--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">adBank</string>
+    <string name="app_name">HostelManagement</string>
+    <string name="welcome_in_hostelmanagement">Welcome in HostelManagement</string>
+    <string name="user_email">user_email</string>
+    <string name="loguot">loguot</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
+    <string name="login">LogIn</string>
+    <string name="no_account_yet">No account yet?</string>
+    <string name="register_now">REGISTER NOW!</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="create_account">Create Account</string>
 </resources>
