--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,5 @@
     <string name="create_account">Create Account</string>
     <string name="hostel_fragment">Hostel fragment</string>
     <string name="renting_fragment">Renting fragment</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hostels_list">Hostels list</string>
 </resources>
